# cis94

./: .gitignore  cis94.cabal
src/Hw1/: Hw1.hs
src/Hw2/: Hw2.hs
src/Hw3/: Hw3.hs
