name:                cis94
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cis94#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src,src/Hw1
  exposed-modules:     Lib
  Other-Modules:       Hw1
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cis94-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis94
  default-language:    Haskell2010

test-suite cis94-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis94
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cis94
